2000-01-28  Havoc Pennington  <hp@redhat.com>

	* gtkpixmapmenuitem.c (gtk_pixmap_menu_item_set_pixmap): The
	mapping/realizing here was a bit wrong.

2000-01-28  Havoc Pennington  <hp@redhat.com>

	* gnome-number-entry.c (browse_clicked): set transient parent, 
	bug 2497

	* gnome-font-picker.c (gnome_font_picker_clicked): set transient
	parent, fixes 2497 
	
	* gnome-color-picker.c (gnome_color_picker_clicked): Set transient
	parent, per bug 2497

2000-01-28  Havoc Pennington  <hp@redhat.com>

	* gnome-propertybox.c (dialog_clicked_cb): merge fix to bug 4378
	from stable branch (handle empty property boxes)

2000-01-26  Iain Holmes  <ih@csd.abdn.ac.uk>

	* gnome-cursors.c: Another new cursor - Pointer with ? beside it.

2000-01-25  Iain Holmes  <ih@csd.abdn.ac.uk>

	* gnome-cursors.[ch]: Added new cursors for resize arrows and the like.
	Changed the default cursor to something pleasing.

Sun Jan 23 16:54:39 2000  George Lebl <jirka@5z.com>

	* gnome-less.[ch]: mark all fields as private and add an accessor
	  for the text field.  Also add a bunch of preconditions.  Remove
	  an unused variable.

Sun Jan 23 14:05:55 2000  George Lebl <jirka@5z.com>

	* gnome-dialog-util.c: add inline docs

Sat Jan 22 16:22:25 2000  George Lebl <jirka@5z.com>

	* gnome-icon-sel.[ch]: marked all fields as private and add accessors
	  to the two internal widgets. plus a small int->gboolean change

	* gnome-icon-entry.c: don't use private fields of gnome-icon-sel,
	  and use the accessor to get the icon list.

Sat Jan 22 15:35:29 2000  George Lebl <jirka@5z.com>

	* gnome-href.[ch]: add a constructor method.  Also make the
	  parameter names consistent with the header by using href instead
	  of self in the .c file

Sat Jan 22 13:51:51 2000  George Lebl <jirka@5z.com>

	* gnome-messagebox.[ch]: add a _construct method and use it in _new and
	  _newv.  This fixes some out of sync code.  Also add documentation
	  for _get_label and mark the label field in the header as